trying to fix camera jump

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 html, body {
-  height: 100%;
+  height: 300vh;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   background-color: #111;
   font-family: 'helvetica neue', helvetica, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -86,9 +86,11 @@ ul, li {
 }
 
 .slider {
+  width: 100vmax;
+  height: 51vmax;
   position: absolute;
   left: 0;
-  top: 0;
+  top: 20vmin;
   right: 0;
   bottom: 0;
 }
